# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.1371 2010-09-03 13:42:00 mb Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

3.0.0 beta3 ????-??-??
 - 2010-09-03 Fixed bug#5811 - Customer Interface account creation error handling does not work correctly.
 - 2010-09-03 Fixed bug#5632 - New Ticket Search Dialog takes about 3 Seconds to load, 3 seconds
    with no feedback. User Experience need to get improved. Faster load of the dialog.
 - 2010-09-03 Fixed bug#5789 - Use of uninitialized value $_ in Kernel/System/CustomerUser/LDAP.pm.
 - 2010-09-03 Fixed bug#5691 - Not possbible for a package to modify a file
    that belongs to another package.
 - 2010-09-02 Fixed bug#5860 - Tooltips are not displayed correct in Customer
    interface.
 - 2010-09-02 Fixed bug#5811 - Customer Interface account creation error
    handling does not work correctly.
 - 2010-09-02 Fixed bug#5818 - Standard height of the article list.
 - 2010-09-02 Fixed bug#5693 - Error messages appearing during mysql tables
    migration.
 - 2010-09-02 Fixed bug#5802 - OTRS 3.0.0 beta 2 doesn't install default packages
    on login.
 - 2010-09-02 Fixed bug#5780 - Have to resize window when replying on ticket.
 - 2010-09-02 Fixed bug#5638 - Strange labels/buttons in TicketSearch "Create New  Delete".
 - 2010-09-02 Fixed bug#5629 - Search Dialog of new Ticket Search Feature is not working with IE7.
 - 2010-09-02 Fixed bug#5582 - Ticket::Frontend::MergeText and special carachters.
 - 2010-09-01 Fixed bug#5851 - 3 AJAX refresh indicators are shown at the top of the AgentTicketPhone page.
 - 2010-09-01 Fixed bug#5835 - Client side validation without JavaScript broken in
    customer interface.
 - 2010-09-01 Fixed bug#5816 - SysConfig HighlightAge, wrong limits and handling.