@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.1371 2010-09-03 13:42:00 mb Exp $
+# $Id: CHANGES,v 1.1372 2010-09-03 14:56:31 mg Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,7 @@
 # --
 
 3.0.0 beta3 ????-??-??
+ - 2010-09-03 Fixed bug#5870 - Login boxes in Customer Interface are too small.
  - 2010-09-03 Fixed bug#5811 - Customer Interface account creation error handling does not work correctly.
  - 2010-09-03 Fixed bug#5632 - New Ticket Search Dialog takes about 3 Seconds to load, 3 seconds
     with no feedback. User Experience need to get improved. Faster load of the dialog.
